# Django-Images

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/core/: settings.py  urls.py
api/images/: admin.py  exceptions.py  models.py  serializer.py  urls.py  views.py
api/images/migrations/: 0001_initial.py  0002_initial.py
api/images/tests/: test_integration.py  test_model.py  test_serializer.py
api/user/: admin.py  apis.py  authentication.py  models.py  serializer.py  services.py  urls.py
api/user/migrations/: 0001_initial.py  0002_size_remove_tier_thumbnail_sizes_and_more.py
api/user/tests/: test_authenticate.py  test_model.py  test_serializer.py
